[tool.poetry]
name = "chromedriver-auto-installer-dev"
version = "0.1.0"
description = ""
authors = ["Neo <neokkv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.15.2"
chromedriver-autoinstaller = {path = "lib/chromedriver_auto_installer", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
